src/main/bnfc/scratch/ParseleKt.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.4 from ParseleKt.y
-----------------------------------------------------------------------------


terminal L_err is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pRecordExpr -> RecordExpr                   (0)
	%start_pRecordExpr2 -> RecordExpr2                 (1)
	%start_pRecordExpr3 -> RecordExpr3                 (2)
	%start_pRecordExpr1 -> RecordExpr1                 (3)
	%start_pBinding -> Binding                         (4)
	%start_pRecordPtn -> RecordPtn                     (5)
	%start_pRecordVariable -> RecordVariable           (6)
	%start_pCollectionExpr -> CollectionExpr           (7)
	%start_pExtensionBodyExpr -> ExtensionBodyExpr     (8)
	%start_pIntensionBodyExpr -> IntensionBodyExpr     (9)
	%start_pDomainDeclOrCond -> DomainDeclOrCond       (10)
	%start_pDomainGen -> DomainGen                     (11)
	%start_pDomainCond -> DomainCond                   (12)
	%start_pDomainPtn -> DomainPtn                     (13)
	%start_pDomainExpr -> DomainExpr                   (14)
	%start_pRecordSource -> RecordSource               (15)
	%start_pDomainCondition -> DomainCondition         (16)
	%start_pDomainCondition1 -> DomainCondition1       (17)
	%start_pDomainCondition2 -> DomainCondition2       (18)
	%start_pModality -> Modality                       (19)
	%start_pRLambdaPCtxt -> RLambdaPCtxt               (20)
	%start_pRLambdaPCtxt1 -> RLambdaPCtxt1             (21)
	%start_pRLambdaPCtxt2 -> RLambdaPCtxt2             (22)
	%start_pContinuePCtxt -> ContinuePCtxt             (23)
	%start_pFormalPCtxt -> FormalPCtxt                 (24)
	%start_pValuePCtxt -> ValuePCtxt                   (25)
	%start_pValuePCtxt1 -> ValuePCtxt1                 (26)
	%start_pValuePCtxt2 -> ValuePCtxt2                 (27)
	%start_pValuePCtxt3 -> ValuePCtxt3                 (28)
	%start_pRLambdaLCtxt -> RLambdaLCtxt               (29)
	%start_pRLambdaLCtxt1 -> RLambdaLCtxt1             (30)
	%start_pRLambdaLCtxt2 -> RLambdaLCtxt2             (31)
	%start_pContinueLCtxt -> ContinueLCtxt             (32)
	%start_pFormalLCtxt -> FormalLCtxt                 (33)
	%start_pValueLCtxt -> ValueLCtxt                   (34)
	%start_pValueLCtxt1 -> ValueLCtxt1                 (35)
	%start_pValueLCtxt2 -> ValueLCtxt2                 (36)
	%start_pValueLCtxt3 -> ValueLCtxt3                 (37)
	%start_pValuePCtxtHole -> ValuePCtxtHole           (38)
	%start_pValueLCtxtHole -> ValueLCtxtHole           (39)
	%start_pLogicalGround -> LogicalGround             (40)
	%start_pComparison -> Comparison                   (41)
	%start_pRLambdaExpr -> RLambdaExpr                 (42)
	%start_pRLambdaExpr1 -> RLambdaExpr1               (43)
	%start_pRLambdaExpr2 -> RLambdaExpr2               (44)
	%start_pContinueExpr -> ContinueExpr               (45)
	%start_pFormalExpr -> FormalExpr                   (46)
	%start_pValueExpr -> ValueExpr                     (47)
	%start_pValueExpr1 -> ValueExpr1                   (48)
	%start_pValueExpr2 -> ValueExpr2                   (49)
	%start_pValueExpr3 -> ValueExpr3                   (50)
	%start_pValueLiteral -> ValueLiteral               (51)
	%start_pStoreURL -> StoreURL                       (52)
	%start_pWireURL -> WireURL                         (53)
	%start_pURL -> URL                                 (54)
	%start_pURLPath -> URLPath                         (55)
	%start_pURLLocation -> URLLocation                 (56)
	%start_pURLRsrcLocation -> URLRsrcLocation         (57)
	%start_pURLRelativePath -> URLRelativePath         (58)
	%start_pURLRoot -> URLRoot                         (59)
	%start_pNetLocation -> NetLocation                 (60)
	%start_pURLScheme -> URLScheme                     (61)
	%start_pURLPathElement -> URLPathElement           (62)
	%start_pDNSElement -> DNSElement                   (63)
	%start_pPort -> Port                               (64)
	%start_pListBinding -> ListBinding                 (65)
	%start_pListDomainDeclOrCond -> ListDomainDeclOrCond   (66)
	%start_pListDomainExpr -> ListDomainExpr           (67)
	%start_pListDomainPtn -> ListDomainPtn             (68)
	%start_pListFormalExpr -> ListFormalExpr           (69)
	%start_pListRLambdaExpr1 -> ListRLambdaExpr1       (70)
	%start_pListFormalPCtxt -> ListFormalPCtxt         (71)
	%start_pListRLambdaPCtxt1 -> ListRLambdaPCtxt1     (72)
	%start_pListFormalLCtxt -> ListFormalLCtxt         (73)
	%start_pListRLambdaLCtxt1 -> ListRLambdaLCtxt1     (74)
	%start_pListURLPathElement -> ListURLPathElement   (75)
	%start_pListDNSElement -> ListDNSElement           (76)
	Ident -> L_ident                                   (77)
	Integer -> L_integ                                 (78)
	Double -> L_doubl                                  (79)
	String -> L_quoted                                 (80)
	Char -> L_charac                                   (81)
	UIdent -> L_UIdent                                 (82)
	Wild -> L_Wild                                     (83)
	RecordExpr -> RecordExpr '&' RecordExpr1           (84)
	RecordExpr -> RecordExpr1 '|' RecordExpr2          (85)
	RecordExpr -> RecordExpr1                          (86)
	RecordExpr2 -> DomainExpr '::' RecordExpr3         (87)
	RecordExpr2 -> RecordExpr3                         (88)
	RecordExpr3 -> 'let' ListBinding 'in' RecordExpr3   (89)
	RecordExpr3 -> RecordVariable                      (90)
	RecordExpr3 -> 'record' CollectionExpr             (91)
	RecordExpr3 -> 'Nil'                               (92)
	RecordExpr3 -> '(' RecordExpr ')'                  (93)
	RecordExpr1 -> RecordExpr2                         (94)
	Binding -> RecordPtn '=' RecordPtn                 (95)
	RecordPtn -> '{:' ListDomainPtn ':' RecordPtn ':}'   (96)
	RecordPtn -> RecordExpr                            (97)
	RecordVariable -> UIdent                           (98)
	RecordVariable -> '_'                              (99)
	CollectionExpr -> ExtensionBodyExpr                (100)
	CollectionExpr -> IntensionBodyExpr                (101)
	ExtensionBodyExpr -> '{' ListDomainExpr '}'        (102)
	IntensionBodyExpr -> '{' DomainPtn '|' ListDomainDeclOrCond '}'   (103)
	DomainDeclOrCond -> DomainCond                     (104)
	DomainDeclOrCond -> DomainGen                      (105)
	DomainGen -> DomainPtn '<-' RecordSource           (106)
	DomainCond -> DomainPtn 'in' DomainCondition       (107)
	DomainCond -> ValueExpr Comparison ValueExpr       (108)
	DomainPtn -> '?' RLambdaPCtxt                      (109)
	DomainExpr -> RLambdaExpr                          (110)
	RecordSource -> RecordExpr                         (111)
	RecordSource -> 'store' StoreURL                   (112)
	RecordSource -> 'wire' WireURL                     (113)
	DomainCondition -> DomainCondition '||' DomainCondition1   (114)
	DomainCondition -> DomainCondition1                (115)
	DomainCondition1 -> DomainCondition1 '&' DomainCondition2   (116)
	DomainCondition1 -> DomainCondition2               (117)
	DomainCondition2 -> '~' DomainCondition2           (118)
	DomainCondition2 -> '(' DomainCondition ')'        (119)
	DomainCondition2 -> '?' RLambdaLCtxt               (120)
	DomainCondition2 -> Modality DomainCondition2      (121)
	Modality -> '<' DomainCondition2 '>'               (122)
	RLambdaPCtxt -> RLambdaPCtxt ListRLambdaPCtxt1 ';'   (123)
	RLambdaPCtxt -> RLambdaPCtxt1                      (124)
	RLambdaPCtxt1 -> 'lambda' ListFormalPCtxt '.' RLambdaPCtxt2   (125)
	RLambdaPCtxt1 -> RLambdaPCtxt2                     (126)
	RLambdaPCtxt2 -> ContinuePCtxt                     (127)
	RLambdaPCtxt2 -> ValuePCtxt                        (128)
	RLambdaPCtxt2 -> FormalPCtxt                       (129)
	RLambdaPCtxt2 -> '(' RLambdaPCtxt ')'              (130)
	ContinuePCtxt -> 'pushPrompt' RLambdaPCtxt2 RLambdaPCtxt2   (131)
	ContinuePCtxt -> 'withSubCont' RLambdaPCtxt2 RLambdaPCtxt2   (132)
	ContinuePCtxt -> 'pushSubCont' RLambdaPCtxt2 RLambdaPCtxt2   (133)
	FormalPCtxt -> '@' '<' RLambdaPCtxt2 '>'           (134)
	ValuePCtxt -> ValuePCtxt '+' ValuePCtxt1           (135)
	ValuePCtxt -> ValuePCtxt1                          (136)
	ValuePCtxt1 -> ValuePCtxt1 '*' ValuePCtxt2         (137)
	ValuePCtxt1 -> ValuePCtxt2                         (138)
	ValuePCtxt2 -> '-' ValuePCtxt3                     (139)
	ValuePCtxt2 -> ValuePCtxt3                         (140)
	ValuePCtxt3 -> '!' ValueLiteral                    (141)
	ValuePCtxt3 -> ValuePCtxtHole                      (142)
	ValuePCtxt3 -> '[' ValuePCtxt ']'                  (143)
	RLambdaLCtxt -> RLambdaLCtxt ListRLambdaLCtxt1 ';'   (144)
	RLambdaLCtxt -> RLambdaLCtxt1                      (145)
	RLambdaLCtxt1 -> 'lambda' ListFormalLCtxt '.' RLambdaLCtxt2   (146)
	RLambdaLCtxt1 -> RLambdaLCtxt2                     (147)
	RLambdaLCtxt2 -> ContinueLCtxt                     (148)
	RLambdaLCtxt2 -> FormalLCtxt                       (149)
	RLambdaLCtxt2 -> ValueLCtxt                        (150)
	RLambdaLCtxt2 -> '(' RLambdaLCtxt ')'              (151)
	ContinueLCtxt -> 'pushPrompt' RLambdaLCtxt2 RLambdaLCtxt2   (152)
	ContinueLCtxt -> 'withSubCont' RLambdaLCtxt2 RLambdaLCtxt2   (153)
	ContinueLCtxt -> 'pushSubCont' RLambdaLCtxt2 RLambdaLCtxt2   (154)
	FormalLCtxt -> '@' '<' RLambdaLCtxt2 '>'           (155)
	ValueLCtxt -> ValueLCtxt '+' ValueLCtxt1           (156)
	ValueLCtxt -> ValueLCtxt1                          (157)
	ValueLCtxt1 -> ValueLCtxt1 '*' ValueLCtxt2         (158)
	ValueLCtxt1 -> ValueLCtxt2                         (159)
	ValueLCtxt2 -> '-' ValueLCtxt3                     (160)
	ValueLCtxt2 -> ValueLCtxt3                         (161)
	ValueLCtxt3 -> '!' ValueLiteral                    (162)
	ValueLCtxt3 -> ValueLCtxtHole                      (163)
	ValueLCtxt3 -> '[' ValueLCtxt ']'                  (164)
	ValuePCtxtHole -> UIdent                           (165)
	ValuePCtxtHole -> Wild                             (166)
	ValueLCtxtHole -> LogicalGround                    (167)
	LogicalGround -> 'true'                            (168)
	LogicalGround -> 'false'                           (169)
	LogicalGround -> 'null'                            (170)
	Comparison -> '=='                                 (171)
	Comparison -> '<'                                  (172)
	Comparison -> '>'                                  (173)
	Comparison -> '<='                                 (174)
	Comparison -> '>='                                 (175)
	RLambdaExpr -> RLambdaExpr ListRLambdaExpr1 ';'    (176)
	RLambdaExpr -> RLambdaExpr1                        (177)
	RLambdaExpr1 -> 'lambda' ListFormalExpr '.' RLambdaExpr2   (178)
	RLambdaExpr1 -> ContinueExpr                       (179)
	RLambdaExpr1 -> RLambdaExpr2                       (180)
	RLambdaExpr2 -> FormalExpr                         (181)
	RLambdaExpr2 -> ValueExpr                          (182)
	ContinueExpr -> 'newPrompt'                        (183)
	ContinueExpr -> 'pushPrompt' RLambdaExpr2 RLambdaExpr2   (184)
	ContinueExpr -> 'withSubCont' RLambdaExpr2 RLambdaExpr2   (185)
	ContinueExpr -> 'pushSubCont' RLambdaExpr2 RLambdaExpr2   (186)
	FormalExpr -> '@' '<' RLambdaExpr2 '>'             (187)
	FormalExpr -> Ident                                (188)
	ValueExpr -> ValueExpr '+' ValueExpr1              (189)
	ValueExpr -> ValueExpr1                            (190)
	ValueExpr1 -> ValueExpr1 '*' ValueExpr2            (191)
	ValueExpr1 -> ValueExpr2                           (192)
	ValueExpr2 -> '-' ValueExpr3                       (193)
	ValueExpr2 -> ValueExpr3                           (194)
	ValueExpr3 -> ValueLiteral                         (195)
	ValueExpr3 -> '[' ValueExpr ']'                    (196)
	ValueLiteral -> '!' RecordExpr3                    (197)
	ValueLiteral -> '(' RLambdaExpr ')'                (198)
	ValueLiteral -> Integer                            (199)
	ValueLiteral -> Double                             (200)
	ValueLiteral -> String                             (201)
	ValueLiteral -> Char                               (202)
	ValueLiteral -> URL                                (203)
	StoreURL -> URL                                    (204)
	WireURL -> URL                                     (205)
	URL -> '<' URLScheme ':' URLPath '>'               (206)
	URLPath -> '/' URLLocation URLRelativePath         (207)
	URLLocation -> URLRoot URLRsrcLocation             (208)
	URLRsrcLocation -> NetLocation ':' Port            (209)
	URLRsrcLocation -> NetLocation                     (210)
	URLRelativePath -> URLRoot ListURLPathElement      (211)
	URLRoot -> '/'                                     (212)
	NetLocation -> ListDNSElement                      (213)
	URLScheme -> Ident                                 (214)
	URLPathElement -> Ident                            (215)
	DNSElement -> Ident                                (216)
	Port -> Integer                                    (217)
	ListBinding ->                                     (218)
	ListBinding -> Binding                             (219)
	ListBinding -> Binding ',' ListBinding             (220)
	ListDomainDeclOrCond ->                            (221)
	ListDomainDeclOrCond -> DomainDeclOrCond           (222)
	ListDomainDeclOrCond -> DomainDeclOrCond ',' ListDomainDeclOrCond   (223)
	ListDomainExpr ->                                  (224)
	ListDomainExpr -> DomainExpr                       (225)
	ListDomainExpr -> DomainExpr ',' ListDomainExpr    (226)
	ListDomainPtn ->                                   (227)
	ListDomainPtn -> DomainPtn                         (228)
	ListDomainPtn -> DomainPtn ',' ListDomainPtn       (229)
	ListFormalExpr ->                                  (230)
	ListFormalExpr -> FormalExpr                       (231)
	ListFormalExpr -> FormalExpr ',' ListFormalExpr    (232)
	ListRLambdaExpr1 ->                                (233)
	ListRLambdaExpr1 -> ListRLambdaExpr1 RLambdaExpr1   (234)
	ListFormalPCtxt ->                                 (235)
	ListFormalPCtxt -> FormalPCtxt                     (236)
	ListFormalPCtxt -> FormalPCtxt ',' ListFormalPCtxt   (237)
	ListRLambdaPCtxt1 ->                               (238)
	ListRLambdaPCtxt1 -> ListRLambdaPCtxt1 RLambdaPCtxt1   (239)
	ListFormalLCtxt ->                                 (240)
	ListFormalLCtxt -> FormalLCtxt                     (241)
	ListFormalLCtxt -> FormalLCtxt ',' ListFormalLCtxt   (242)
	ListRLambdaLCtxt1 ->                               (243)
	ListRLambdaLCtxt1 -> ListRLambdaLCtxt1 RLambdaLCtxt1   (244)
	ListURLPathElement ->                              (245)
	ListURLPathElement -> URLPathElement               (246)
	ListURLPathElement -> URLPathElement '/' ListURLPathElement   (247)
	ListDNSElement ->                                  (248)
	ListDNSElement -> DNSElement                       (249)
	ListDNSElement -> DNSElement '.' ListDNSElement    (250)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'&'            { PT _ (TS "&") }
	'|'            { PT _ (TS "|") }
	'::'           { PT _ (TS "::") }
	'('            { PT _ (TS "(") }
	')'            { PT _ (TS ")") }
	'='            { PT _ (TS "=") }
	'{:'           { PT _ (TS "{:") }
	':'            { PT _ (TS ":") }
	':}'           { PT _ (TS ":}") }
	'_'            { PT _ (TS "_") }
	'{'            { PT _ (TS "{") }
	'}'            { PT _ (TS "}") }
	'<-'           { PT _ (TS "<-") }
	'?'            { PT _ (TS "?") }
	'||'           { PT _ (TS "||") }
	'~'            { PT _ (TS "~") }
	'<'            { PT _ (TS "<") }
	'>'            { PT _ (TS ">") }
	';'            { PT _ (TS ";") }
	'.'            { PT _ (TS ".") }
	'@'            { PT _ (TS "@") }
	'+'            { PT _ (TS "+") }
	'*'            { PT _ (TS "*") }
	'-'            { PT _ (TS "-") }
	'!'            { PT _ (TS "!") }
	'['            { PT _ (TS "[") }
	']'            { PT _ (TS "]") }
	'=='           { PT _ (TS "==") }
	'<='           { PT _ (TS "<=") }
	'>='           { PT _ (TS ">=") }
	'/'            { PT _ (TS "/") }
	','            { PT _ (TS ",") }
	'Nil'          { PT _ (TS "Nil") }
	'false'        { PT _ (TS "false") }
	'in'           { PT _ (TS "in") }
	'lambda'       { PT _ (TS "lambda") }
	'let'          { PT _ (TS "let") }
	'newPrompt'    { PT _ (TS "newPrompt") }
	'null'         { PT _ (TS "null") }
	'pushPrompt'   { PT _ (TS "pushPrompt") }
	'pushSubCont'  { PT _ (TS "pushSubCont") }
	'record'       { PT _ (TS "record") }
	'store'        { PT _ (TS "store") }
	'true'         { PT _ (TS "true") }
	'wire'         { PT _ (TS "wire") }
	'withSubCont'  { PT _ (TS "withSubCont") }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_charac       { PT _ (TC $$) }
	L_UIdent       { PT _ (T_UIdent $$) }
	L_Wild         { PT _ (T_Wild $$) }
	L_err          { _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pRecordExpr rule  0
	%start_pRecordExpr2 rule  1
	%start_pRecordExpr3 rule  2
	%start_pRecordExpr1 rule  3
	%start_pBinding rule  4
	%start_pRecordPtn rule  5
	%start_pRecordVariable rule  6
	%start_pCollectionExpr rule  7
	%start_pExtensionBodyExpr rule  8
	%start_pIntensionBodyExpr rule  9
	%start_pDomainDeclOrCond rule  10
	%start_pDomainGen rule  11
	%start_pDomainCond rule  12
	%start_pDomainPtn rule  13
	%start_pDomainExpr rule  14
	%start_pRecordSource rule  15
	%start_pDomainCondition rule  16
	%start_pDomainCondition1 rule  17
	%start_pDomainCondition2 rule  18
	%start_pModality rule  19
	%start_pRLambdaPCtxt rule  20
	%start_pRLambdaPCtxt1 rule  21
	%start_pRLambdaPCtxt2 rule  22
	%start_pContinuePCtxt rule  23
	%start_pFormalPCtxt rule  24
	%start_pValuePCtxt rule  25
	%start_pValuePCtxt1 rule  26
	%start_pValuePCtxt2 rule  27
	%start_pValuePCtxt3 rule  28
	%start_pRLambdaLCtxt rule  29
	%start_pRLambdaLCtxt1 rule  30
	%start_pRLambdaLCtxt2 rule  31
	%start_pContinueLCtxt rule  32
	%start_pFormalLCtxt rule  33
	%start_pValueLCtxt rule  34
	%start_pValueLCtxt1 rule  35
	%start_pValueLCtxt2 rule  36
	%start_pValueLCtxt3 rule  37
	%start_pValuePCtxtHole rule  38
	%start_pValueLCtxtHole rule  39
	%start_pLogicalGround rule  40
	%start_pComparison rule  41
	%start_pRLambdaExpr rule  42
	%start_pRLambdaExpr1 rule  43
	%start_pRLambdaExpr2 rule  44
	%start_pContinueExpr rule  45
	%start_pFormalExpr rule  46
	%start_pValueExpr rule  47
	%start_pValueExpr1 rule  48
	%start_pValueExpr2 rule  49
	%start_pValueExpr3 rule  50
	%start_pValueLiteral rule  51
	%start_pStoreURL rule  52
	%start_pWireURL rule  53
	%start_pURL     rule  54
	%start_pURLPath rule  55
	%start_pURLLocation rule  56
	%start_pURLRsrcLocation rule  57
	%start_pURLRelativePath rule  58
	%start_pURLRoot rule  59
	%start_pNetLocation rule  60
	%start_pURLScheme rule  61
	%start_pURLPathElement rule  62
	%start_pDNSElement rule  63
	%start_pPort    rule  64
	%start_pListBinding rule  65
	%start_pListDomainDeclOrCond rule  66
	%start_pListDomainExpr rule  67
	%start_pListDomainPtn rule  68
	%start_pListFormalExpr rule  69
	%start_pListRLambdaExpr1 rule  70
	%start_pListFormalPCtxt rule  71
	%start_pListRLambdaPCtxt1 rule  72
	%start_pListFormalLCtxt rule  73
	%start_pListRLambdaLCtxt1 rule  74
	%start_pListURLPathElement rule  75
	%start_pListDNSElement rule  76
	Ident           rule  77
	Integer         rule  78
	Double          rule  79
	String          rule  80
	Char            rule  81
	UIdent          rule  82
	Wild            rule  83
	RecordExpr      rules 84, 85, 86
	RecordExpr2     rules 87, 88
	RecordExpr3     rules 89, 90, 91, 92, 93
	RecordExpr1     rule  94
	Binding         rule  95
	RecordPtn       rules 96, 97
	RecordVariable  rules 98, 99
	CollectionExpr  rules 100, 101
	ExtensionBodyExpr rule  102
	IntensionBodyExpr rule  103
	DomainDeclOrCond rules 104, 105
	DomainGen       rule  106
	DomainCond      rules 107, 108
	DomainPtn       rule  109
	DomainExpr      rule  110
	RecordSource    rules 111, 112, 113
	DomainCondition rules 114, 115
	DomainCondition1 rules 116, 117
	DomainCondition2 rules 118, 119, 120, 121
	Modality        rule  122
	RLambdaPCtxt    rules 123, 124
	RLambdaPCtxt1   rules 125, 126
	RLambdaPCtxt2   rules 127, 128, 129, 130
	ContinuePCtxt   rules 131, 132, 133
	FormalPCtxt     rule  134
	ValuePCtxt      rules 135, 136
	ValuePCtxt1     rules 137, 138
	ValuePCtxt2     rules 139, 140
	ValuePCtxt3     rules 141, 142, 143
	RLambdaLCtxt    rules 144, 145
	RLambdaLCtxt1   rules 146, 147
	RLambdaLCtxt2   rules 148, 149, 150, 151
	ContinueLCtxt   rules 152, 153, 154
	FormalLCtxt     rule  155
	ValueLCtxt      rules 156, 157
	ValueLCtxt1     rules 158, 159
	ValueLCtxt2     rules 160, 161
	ValueLCtxt3     rules 162, 163, 164
	ValuePCtxtHole  rules 165, 166
	ValueLCtxtHole  rule  167
	LogicalGround   rules 168, 169, 170
	Comparison      rules 171, 172, 173, 174, 175
	RLambdaExpr     rules 176, 177
	RLambdaExpr1    rules 178, 179, 180
	RLambdaExpr2    rules 181, 182
	ContinueExpr    rules 183, 184, 185, 186
	FormalExpr      rules 187, 188
	ValueExpr       rules 189, 190
	ValueExpr1      rules 191, 192
	ValueExpr2      rules 193, 194
	ValueExpr3      rules 195, 196
	ValueLiteral    rules 197, 198, 199, 200, 201, 202, 203
	StoreURL        rule  204
	WireURL         rule  205
	URL             rule  206
	URLPath         rule  207
	URLLocation     rule  208
	URLRsrcLocation rules 209, 210
	URLRelativePath rule  211
	URLRoot         rule  212
	NetLocation     rule  213
	URLScheme       rule  214
	URLPathElement  rule  215
	DNSElement      rule  216
	Port            rule  217
	ListBinding     rules 218, 219, 220
	ListDomainDeclOrCond rules 221, 222, 223
	ListDomainExpr  rules 224, 225, 226
	ListDomainPtn   rules 227, 228, 229
	ListFormalExpr  rules 230, 231, 232
	ListRLambdaExpr1 rules 233, 234
	ListFormalPCtxt rules 235, 236, 237
	ListRLambdaPCtxt1 rules 238, 239
	ListFormalLCtxt rules 240, 241, 242
	ListRLambdaLCtxt1 rules 243, 244
	ListURLPathElement rules 245, 246, 247
	ListDNSElement  rules 248, 249, 250

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'('            shift, and enter state 148
	'_'            shift, and enter state 150
	'<'            shift, and enter state 119
	'@'            shift, and enter state 97
	'-'            shift, and enter state 120
	'!'            shift, and enter state 121
	'['            shift, and enter state 122
	'Nil'          shift, and enter state 151
	'lambda'       shift, and enter state 123
	'let'          shift, and enter state 152
	'newPrompt'    shift, and enter state 124
	'pushPrompt'   shift, and enter state 125
	'pushSubCont'  shift, and enter state 126
	'record'       shift, and enter state 153
	'withSubCont'  shift, and enter state 127
	L_ident        shift, and enter state 78
	L_integ        shift, and enter state 128
	L_doubl        shift, and enter state 129
	L_quoted       shift, and enter state 130
	L_charac       shift, and enter state 131
	L_UIdent       shift, and enter state 154

	Ident          goto state 94
	Integer        goto state 101
	Double         goto state 102
	String         goto state 103
	Char           goto state 104
	UIdent         goto state 138
	RecordExpr     goto state 293
	RecordExpr2    goto state 140
	RecordExpr3    goto state 141
	RecordExpr1    goto state 142
	RecordVariable goto state 145
	DomainExpr     goto state 146
	RLambdaExpr    goto state 106
	RLambdaExpr1   goto state 107
	RLambdaExpr2   goto state 108
	ContinueExpr   goto state 109
	FormalExpr     goto state 110
	ValueExpr      goto state 111
	ValueExpr1     goto state 112
	ValueExpr2     goto state 113
	ValueExpr3     goto state 114
	ValueLiteral   goto state 115
	URL            goto state 116

State 1


	'('            shift, and enter state 148
	'_'            shift, and enter state 150
	'<'            shift, and enter state 119
	'@'            shift, and enter state 97
	'-'            shift, and enter state 120
	'!'            shift, and enter state 121
	'['            shift, and enter state 122
	'Nil'          shift, and enter state 151
	'lambda'       shift, and enter state 123
	'let'          shift, and enter state 152
	'newPrompt'    shift, and enter state 124
	'pushPrompt'   shift, and enter state 125
	'pushSubCont'  shift, and enter state 126
	'record'       shift, and enter state 153
	'withSubCont'  shift, and enter state 127
	L_ident        shift, and enter state 78
	L_integ        shift, and enter state 128
	L_doubl        shift, and enter state 129
	L_quoted       shift, and enter state 130
	L_charac       shift, and enter state 131
	L_UIdent       shift, and enter state 154

	Ident          goto state 94
	Integer        goto state 101
	Double         goto state 102
	String         goto state 103
	Char           goto state 104
	UIdent         goto state 138
	RecordExpr2    goto state 292
	RecordExpr3    goto state 141
	RecordVariable goto state 145
	DomainExpr     goto state 146
	RLambdaExpr    goto state 106
	RLambdaExpr1   goto state 107
	RLambdaExpr2   goto state 108
	ContinueExpr   goto state 109
	FormalExpr     goto state 110
	ValueExpr      goto state 111
	ValueExpr1     goto state 112
	ValueExpr2     goto state 113
	ValueExpr3     goto state 114
	ValueLiteral   goto state 115
	URL            goto state 116

State 2


	'('            shift, and enter state 291
	'_'            shift, and enter state 150
	'Nil'          shift, and enter state 151
	'let'          shift, and enter state 152
	'record'       shift, and enter state 153
	L_UIdent       shift, and enter state 154

	UIdent         goto state 138
	RecordExpr3    goto state 290
	RecordVariable goto state 145

State 3


	'('            shift, and enter state 148
	'_'            shift, and enter state 150
	'<'            shift, and enter state 119
	'@'            shift, and enter state 97
	'-'            shift, and enter state 120
	'!'            shift, and enter state 121
	'['            shift, and enter state 122
	'Nil'          shift, and enter state 151
	'lambda'       shift, and enter state 123
	'let'          shift, and enter state 152
	'newPrompt'    shift, and enter state 124
	'pushPrompt'   shift, and enter state 125
	'pushSubCont'  shift, and enter state 126
	'record'       shift, and enter state 153
	'withSubCont'  shift, and enter state 127
	L_ident        shift, and enter state 78
	L_integ        shift, and enter state 128
	L_doubl        shift, and enter state 129
	L_quoted       shift, and enter state 130
	L_charac       shift, and enter state 131
	L_UIdent       shift, and enter state 154

	Ident          goto state 94
	Integer        goto state 101
	Double         goto state 102
	String         goto state 103
	Char           goto state 104
	UIdent         goto state 138
	RecordExpr2    goto state 140
	RecordExpr3    goto state 141
	RecordExpr1    goto state 289
	RecordVariable goto state 145
	DomainExpr     goto state 146
	RLambdaExpr    goto state 106
	RLambdaExpr1   goto state 107
	RLambdaExpr2   goto state 108
	ContinueExpr   goto state 109
	FormalExpr     goto state 110
	ValueExpr      goto state 111
	ValueExpr1     goto state 112
	ValueExpr2     goto state 113
	ValueExpr3     goto state 114
	ValueLiteral   goto state 115
	URL            goto state 116

State 4


	'('            shift, and enter state 148
	'{:'           shift, and enter state 149
	'_'            shift, and enter state 150
	'<'            shift, and enter state 119
	'@'            shift, and enter state 97
	'-'            shift, and enter state 120
	'!'            shift, and enter state 121
	'['            shift, and enter state 122
	'Nil'          shift, and enter state 151
	'lambda'       shift, and enter state 123
	'let'          shift, and enter state 152
	'newPrompt'    shift, and enter state 124
	'pushPrompt'   shift, and enter state 125
	'pushSubCont'  shift, and enter state 126
	'record'       shift, and enter state 153
	'withSubCont'  shift, and enter state 127
	L_ident        shift, and enter state 78
	L_integ        shift, and enter state 128
	L_doubl        shift, and enter state 129
	L_quoted       shift, and enter state 130
	L_charac       shift, and enter state 131
	L_UIdent       shift, and enter state 154

	Ident          goto state 94
	Integer        goto state 101
	Double         goto state 102
	String         goto state 103
	Char           goto state 104
	UIdent         goto state 138
	RecordExpr     goto state 139
	RecordExpr2    goto state 140
	RecordExpr3    goto state 141
	RecordExpr1    goto state 142
	Binding        goto state 288
	RecordPtn      goto state 144
	RecordVariable goto state 145
	DomainExpr     goto state 146
	RLambdaExpr    goto state 106
	RLambdaExpr1   goto state 107
	RLambdaExpr2   goto state 108
	ContinueExpr   goto state 109
	FormalExpr     goto state 110
	ValueExpr      goto state 111
	ValueExpr1     goto state 112
	ValueExpr2     goto state 113
	ValueExpr3     goto state 114
	ValueLiteral   goto state 115
	URL            goto state 116

State 5


	'('            shift, and enter state 148
	'{:'           shift, and enter state 149
	'_'            shift, and enter state 150
	'<'            shift, and enter state 119
	'@'            shift, and enter state 97
	'-'            shift, and enter state 120
	'!'            shift, and enter state 121
	'['            shift, and enter state 122
	'Nil'          shift, and enter state 151
	'lambda'       shift, and enter state 123
	'let'          shift, and enter state 152
	'newPrompt'    shift, and enter state 124
	'pushPrompt'   shift, and enter state 125
	'pushSubCont'  shift, and enter state 126
	'record'       shift, and enter state 153
	'withSubCont'  shift, and enter state 127
	L_ident        shift, and enter state 78
	L_integ        shift, and enter state 128
	L_doubl        shift, and enter state 129
	L_quoted       shift, and enter state 130
	L_charac       shift, and enter state 131
	L_UIdent       shift, and enter state 154

	Ident          goto state 94
	Integer        goto state 101
	Double         goto state 102
	String         goto state 103
	Char           goto state 104
	UIdent         goto state 138
	RecordExpr     goto state 139
	RecordExpr2    goto state 140
	RecordExpr3    goto state 141
	RecordExpr1    goto state 142
	RecordPtn      goto state 287
	RecordVariable goto state 145
	DomainExpr     goto state 146
	RLambdaExpr    goto state 106
	RLambdaExpr1   goto state 107
	RLambdaExpr2   goto state 108
	ContinueExpr   goto state 109
	FormalExpr     goto state 110
	ValueExpr      goto state 111
	ValueExpr1     goto state 112
	ValueExpr2     goto state 113
	ValueExpr3     goto state 114
	ValueLiteral   goto state 115
	URL            goto state 116

State 6


	'_'            shift, and enter state 150
	L_UIdent       shift, and enter state 154

	UIdent         goto state 138
	RecordVariable goto state 286

State 7


	'{'            shift, and enter state 285

	CollectionExpr goto state 282
	ExtensionBodyExprgoto state 283
	IntensionBodyExprgoto state 284

State 8


	'{'            shift, and enter state 281

	ExtensionBodyExprgoto state 280

State 9


	'{'            shift, and enter state 279

	IntensionBodyExprgoto state 278

State 10

